--- a/angular.json
+++ b/angular.json
@@ -6,12 +6,34 @@
     "Angular": {
       "projectType": "application",
       "schematics": {
-        "@schematics/angular:component": {
-          "style": "scss"
-        },
-        "@schematics/angular:application": {
-          "strict": true
-        }
+          "@schematics/angular:component": {
+            "style": "scss",
+            "skipTests": true
+          },
+          "@schematics/angular:application": {
+            "strict": true
+          },
+          "@schematics/angular:class": {
+            "skipTests": true
+          },
+          "@schematics/angular:directive": {
+            "skipTests": true
+          },
+          "@schematics/angular:guard": {
+            "skipTests": true
+          },
+          "@schematics/angular:interceptor": {
+            "skipTests": true
+          },
+          "@schematics/angular:module": {
+            "skipTests": true
+          },
+          "@schematics/angular:pipe": {
+            "skipTests": true
+          },
+          "@schematics/angular:service": {
+            "skipTests": true
+          }
       },
       "root": "",
       "sourceRoot": "src",
